--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0;">
 
     <!-- Vendor CSS Files -->
-    <link href="aos.css" rel="stylesheet">
-    <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="bootstrap-icons.css" rel="stylesheet">
-    <!-- main CSS Files -->
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+<!-- main CSS Files -->
     <link rel="stylesheet" href="main.css">
 
     <title>Home</title>
@@ -225,13 +225,18 @@
     </footer>
 
     <!--java script-->
-    <script src="aos.js"></script>
-    <script src="bootstrap.bundle.min.js"></script>
-    <script src="glightbox.min.js"></script>
-    <script src="swiper-bundle.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="main.js"></script>
+    <script src="assets/js/main.js"></script>
+
+    <!-- Template Main JS File -->
+ <!-- <script src="main.js"></script> -->
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center active"><i class="bi bi-arrow-up-short"></i></a>
 </body>
 
