--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- main CSS Files -->
     <link rel="stylesheet" href="main.css">
 
-    <title>Home</title>
+    <title>OSAMA</title>
 </head>
 
 <body>
@@ -61,8 +61,8 @@
                     <div class="carousel-item active" style="background: url(image/undraw_hacker_mind_-6-y85.svg)">
                         <div class="carousel-container">
                             <div class="carousel-content">
-                                <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Eterna</span></h2>
-                                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus
+                                <h2 class="animate__animated animate__fadeInDown" data-aos="zoom-in">Welcome to <br><span>My Web Site</span></h2>
+                                <p class="animate__animated animate__fadeInUp" data-aos="zoom-in">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus
                                     et tempore modi architecto.</p>
                                 <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
                             </div>
