--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
                 </div>
                 <form action="home.html" class="login p-3">
                     <input type="text" placeholder="Frist Name" class="form-control" required>
-                    <input type="text" placeholder="Last Name (optional)" class="form-control">
+                    <input type="text" placeholder="Last Name" class="form-control" required>
                     <input type="email" placeholder="Email" class="form-control" required>
                     <input type="password" placeholder="Password" class="form-control" required>
                     <button class="btn bot col-4 offset-4">Login</button>
