--- a/login.html
+++ b/login.html
@@ -53,11 +53,11 @@
                 <div class="head p-3 text-center mb-3">
                     <span class="active m-3">Sign Up</span>
                 </div>
-                <form action="home.html" class="login p-3">
+                <form action="index.html" class="login p-3">
                     <input type="text" placeholder="Frist Name" class="form-control" required>
                     <input type="text" placeholder="Last Name" class="form-control" required>
                     <input type="email" placeholder="Email" class="form-control" required>
-                    <input type="password" placeholder="Password" class="form-control" required>
+                    <input type="password" placeholder="Password" class="form-control" minlength="7" required>
                     <button class="btn bot col-4 offset-4">Login</button>
                 </form>
                 <div class="myfooter">
