--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                                 <li><label for="email">Email</label></li>
                                 <li><input type="email" name="email" required></li>
                                 <li><label for="password">Password</label></li>
-                                <li><input type="password" name="password" required></li>
+                                <li><input type="password" name="password" minlength="7" required></li>
                                 <li><button type="submit" class="btn bot">Login</button></li>
                             </form>
                         </ul>
