--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="container">
 
             <div class="row content">
-                <div class="col-md-4 " data-aos="fade-right">
+                <div class="col-md-4 mt-5 mt-sm-0" data-aos="fade-right">
                     <img src="image/details-1.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-md-8 pt-4" data-aos="fade-up">
@@ -135,7 +135,7 @@
             </div>
 
             <div class="row content ">
-                <div class="col-md-4 order-1 order-md-2 mt-lg-5" data-aos="fade-left">
+                <div class="col-md-4 order-1 order-md-2 mt-5 mt-sm-0" data-aos="fade-left">
                     <img src="image/undraw_web_development_0l6v.svg" class="img-fluid" alt="">
                 </div>
                 <div class="col-md-8 pt-5 order-2 order-md-1" data-aos="fade-up">
@@ -154,7 +154,7 @@
             </div>
 
             <div class="row content">
-                <div class="col-md-4 mt-lg-5" data-aos="fade-right">
+                <div class="col-md-4 mt-5 mt-sm-0" data-aos="fade-right">
                     <img src="image/undraw_static_website_re_x70h.svg" class="img-fluid" alt="">
                 </div>
                 <div class="col-md-8 pt-5 aos-init" data-aos="fade-up">
